cocktail codec, a lot of clean-up