@@ -10,28 +10,33 @@ import com.mojang.serialization.JsonOps;
 import gay.lemmaeof.barkeep.Barkeep;
 import gay.lemmaeof.barkeep.data.Cocktail;
 import gay.lemmaeof.barkeep.data.Drink;
+import gay.lemmaeof.barkeep.data.DrinkIngredient;
 import gay.lemmaeof.barkeep.data.component.CocktailComponent;
+import gay.lemmaeof.barkeep.init.BarkeepRegistries;
 import net.fabricmc.fabric.api.resource.IdentifiableResourceReloadListener;
 import net.fabricmc.fabric.api.resource.ResourceManagerHelper;
+import net.minecraft.item.ItemStack;
+import net.minecraft.recipe.Ingredient;
 import net.minecraft.registry.DynamicRegistryManager;
+import net.minecraft.registry.Registry;
 import net.minecraft.registry.RegistryOps;
+import net.minecraft.registry.entry.RegistryEntry;
 import net.minecraft.resource.JsonDataLoader;
 import net.minecraft.resource.ResourceManager;
 import net.minecraft.resource.ResourceType;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.profiler.Profiler;
 
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
+//TODO: sync! Shouldn't be hard thanks to codec-y stuff
 public class CocktailRecipeManager extends JsonDataLoader implements IdentifiableResourceReloadListener {
 	private static final Gson GSON = new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().create();
 	public static CocktailRecipeManager INSTANCE;
 	private final DynamicRegistryManager registryManager;
 	private final Map<Identifier, CocktailRecipeEntry> recipes = new HashMap<>();
 	private final RegistryOps<JsonElement> ops;
+	private final Map<Identifier, CocktailComponent> sampleCocktails = new HashMap<>();
 
 	public static void register(DynamicRegistryManager registryManager) {
 		INSTANCE = new CocktailRecipeManager(registryManager);
@@ -47,35 +52,56 @@ public class CocktailRecipeManager extends JsonDataLoader implements Identifiabl
 	@Override
 	protected void apply(Map<Identifier, JsonElement> prepared, ResourceManager manager, Profiler profiler) {
 		recipes.clear();
+		sampleCocktails.clear();
 
 		for (Identifier id : prepared.keySet()) {
 			JsonObject json = prepared.get(id).getAsJsonObject();
 
 			DataResult<Pair<CocktailRecipe, JsonElement>> result = CocktailRecipe.CODEC.decode(ops, json);
 			if (result.isSuccess()) {
-				recipes.put(id, new CocktailRecipeEntry(id, result.getOrThrow().getFirst()));
+				CocktailRecipe recipe = result.getOrThrow().getFirst();
+				CocktailRecipeEntry entry = new CocktailRecipeEntry(id, recipe);
+				recipes.put(id, entry);
+				Map<RegistryEntry<Drink>, Integer> sampleDrinks = new HashMap<>();
+				List<ItemStack> sampleGarniture = new ArrayList<>();
+				for (DrinkIngredient ing : recipe.drinkInputs()) {
+					if (ing.getDrinks().size() > 0) sampleDrinks.put(ing.getDrinks().get(0), ing.getQuarters());
+				}
+				for (Ingredient i : recipe.preferredGarniture()) {
+					ItemStack[] stacks = i.getMatchingStacks();
+					if (stacks.length > 0) sampleGarniture.add(i.getMatchingStacks()[0]);
+				}
+				sampleCocktails.put(id, new CocktailComponent(new Cocktail(sampleDrinks, recipe.preparation(), entry), sampleGarniture));
 			} else {
 				Barkeep.LOGGER.info("Error parsing cocktail {}: {}", id, result.error().toString());
 			}
 		}
 	}
 
-	public Optional<CocktailRecipeEntry> findCocktail(Map<Drink, Integer> drinks, CocktailRecipe.Preparation preparation) {
+	public Optional<CocktailRecipeEntry> findCocktail(Map<Drink, Integer> drinks, CocktailPreparation preparation) {
 		return recipes.values().stream().filter(cocktail -> cocktail.recipe().matches(drinks, preparation)).findFirst();
 	}
 
-	public CocktailComponent createSampleCocktail(Identifier id) {
-		//TODO: impl, cache these
-		return null;
+	public CocktailComponent getSampleCocktail(Identifier id) {
+		return sampleCocktails.get(id);
 	}
 
-	public Cocktail createCocktail(Map<Drink, Integer> drinks, CocktailRecipe.Preparation preparation) {
-		//TODO: impl
-		return null;
+	public Cocktail createCocktail(Map<Drink, Integer> drinks, CocktailPreparation preparation) {
+		Optional<CocktailRecipeEntry> recipe = findCocktail(drinks, preparation);
+		Map<RegistryEntry<Drink>, Integer> drinkEntries = new HashMap<>();
+		Registry<Drink> registry = registryManager.get(BarkeepRegistries.DRINKS);
+		for (Drink drink : drinks.keySet()) {
+			drinkEntries.put(registry.getEntry(drink), drinks.get(drink));
+		}
+		return new Cocktail(drinkEntries, preparation, recipe.orElse(null));
 	}
 
-	public CocktailRecipeEntry getRecipe(Identifier id) {
+	public CocktailRecipeEntry getRecipeEntry(Identifier id) {
 		return recipes.get(id);
+	}
+
+	public CocktailRecipe getRecipe(Identifier id) {
+		return recipes.get(id).recipe();
 	}
 
 	public Collection<Identifier> getCocktailIds() {
